[INFER] Mark all cross-compartment iterations as producing unknown values, bug 641224.